--- a/result/2021-12-18.md
+++ b/result/2021-12-18.md
@@ -56,3 +56,4 @@
 56. [山东夫妇捡脑瘫弃婴一养32年](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E5%A4%AB%E5%A6%87%E6%8D%A1%E8%84%91%E7%98%AB%E5%BC%83%E5%A9%B4%E4%B8%80%E5%85%BB32%E5%B9%B4%23&Refer=top) 138122
 57. [全国12个高风险59个中风险地区](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD12%E4%B8%AA%E9%AB%98%E9%A3%8E%E9%99%A959%E4%B8%AA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 135982
 58. [孝义盗采煤矿透水事故首名被困者升井](https://s.weibo.com//weibo?q=%23%E5%AD%9D%E4%B9%89%E7%9B%97%E9%87%87%E7%85%A4%E7%9F%BF%E9%80%8F%E6%B0%B4%E4%BA%8B%E6%95%85%E9%A6%96%E5%90%8D%E8%A2%AB%E5%9B%B0%E8%80%85%E5%8D%87%E4%BA%95%23&Refer=top) 132121
+59. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 74486
