--- a/result/2021-12-18.md
+++ b/result/2021-12-18.md
@@ -57,5 +57,6 @@
 57. [全国12个高风险59个中风险地区](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD12%E4%B8%AA%E9%AB%98%E9%A3%8E%E9%99%A959%E4%B8%AA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 135982
 58. [孝义盗采煤矿透水事故首名被困者升井](https://s.weibo.com//weibo?q=%23%E5%AD%9D%E4%B9%89%E7%9B%97%E9%87%87%E7%85%A4%E7%9F%BF%E9%80%8F%E6%B0%B4%E4%BA%8B%E6%95%85%E9%A6%96%E5%90%8D%E8%A2%AB%E5%9B%B0%E8%80%85%E5%8D%87%E4%BA%95%23&Refer=top) 132121
 59. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 85765
-60. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
-61. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 44999
+60. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 79549
+61. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
+62. [2021只剩下最后15天](https://s.weibo.com//weibo?q=%232021%E5%8F%AA%E5%89%A9%E4%B8%8B%E6%9C%80%E5%90%8E15%E5%A4%A9%23&Refer=top) 28849
